# robot-framework

./: CMakeLists.txt  README.md
docs/: architecture.md  development.md
robot_common/: RobotMode.hpp  RobotType.hpp
robot_control/: CMakeLists.txt  JointControl.cpp  JointControl.hpp  JointController.cpp  JointController.hpp  Pid.cpp  RobotCommand.cpp  RobotCommand.hpp  RobotControl.cpp  RobotControl.hpp  RobotController.cpp  RobotController.hpp  RobotState.cpp  RobotState.hpp
robot_control/include/: JointController.hpp  Pid.hpp  RobotCommand.hpp  RobotController.hpp  RobotState.hpp
robot_control/src/: RobotCommand.cpp  RobotController.cpp  RobotState.cpp
robot_hardware/: CMakeLists.txt  HardwareInterface.hpp  MockHardware.cpp  MockHardware.hpp
robot_hardware/include/: HardwareInterface.hpp
robot_hardware/src/: MockHardware.cpp
robot_interfaces/: RobotType.hpp
src/: CMakeLists.txt  main.cpp
